<?xml version="1.0"?>
<package>
  <name>save_bag</name>
  <version>0.0.0</version>
  <description>data_receiver package</description>
  <maintainer email="test@todo.todo">test</maintainer>
  <license>TODO</license>
  <build_depend>message_generation</build_depend>
  <run_depend>message_runtime</run_depend>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <run_depend>roscpp</run_depend> 
  <run_depend>std_msgs</run_depend>
</package>
